# openwrt-tuya-connect-kit-for-mqtt-embedded-c

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
examples/cellular_demo/: CMakeLists.txt  cellular_demo.c
examples/switch_demo/: CMakeLists.txt
examples/tuya_ota_demo/: CMakeLists.txt  qrencode_print.c
